# Soup_Agent

./: .gitignore  README.md  manage.py  pyproject.toml  summarizer_graph.py
agentchat/: agent.py  apps.py  tools.py  urls.py  utils.py  views.py
frontend/src/: App.tsx  Chat.tsx
soupagent/: asgi.py  settings.py  urls.py  wsgi.py
